modules/vpc/vpc.tf
resource "aws_vpc" "prod" {
  cidr_block = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support = true
  tags = {
    "Name" = var.vpc_name
  }
}
